--- a/package.json
+++ b/package.json
@@ -7,16 +7,21 @@
   "dependencies": {
     "gatsby": "^2.3.16",
     "gatsby-image": "^2.0.37",
-    "gatsby-plugin-manifest": "^2.0.28",
+    "gatsby-plugin-manifest": "^2.0.29",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.0.32",
     "gatsby-source-filesystem": "^2.0.29",
     "gatsby-transformer-sharp": "^2.1.17",
+    "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-scrollchor": "^6.0.0",
+    "smooth-scroll": "^16.0.3"
   },
   "devDependencies": {
     "prettier": "^1.17.0"
