--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
+    "react-icons": "^3.6.1",
     "react-scrollchor": "^6.0.0",
     "smooth-scroll": "^16.0.3"
   },
