--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-helmet": "^5.2.0",
     "react-icons": "^3.6.1",
     "react-scrollchor": "^6.0.0",
-    "smooth-scroll": "^16.0.3"
+    "smooth-scroll": "^16.0.3",
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "prettier": "^1.17.0"
